--- a/dependencies/android/facebook-sdk/build.gradle
+++ b/dependencies/android/facebook-sdk/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
+
     repositories {
-        maven {
-            url "http://repo1.maven.org/maven2/"
-        }
+        jcenter()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
